# mropes

./: .travis.yml  CMakeLists.txt  Changelog.md  LICENSE  README.md  mrope_rangeTest.c
.github/workflows/: ccpp.yml  release.yml
cmake/: Findcheck.cmake  Findsubunit.cmake
include/mropes/: rope.h
mropes/: rope.c  rope_ops.c  rope_ops.h  rope_stack.c  rope_stack.h
src/: rope.c  rope_ops.c  rope_ops.h  rope_stack.c  rope_stack.h  version.h.in
tests/: CMakeLists.txt  check_mropes_core.c  check_mropes_core_clone.c  check_mropes_core_delete.c  check_mropes_core_insert.c  check_mropes_core_ops.c  check_mropes_core_ops_stack.c  check_mropes_core_split.c
